k8s/app-python-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: aren1994/aren_web:1.0.0 # replace with your actual image
        ports:
        - containerPort: 5000
