k8s/python-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: python-app
      port:
        number: 80
  rules:
  - host: pythonapp.example.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/"
        backend:
          service:
            name: python-app
            port:
              number: 5000
